--- a/index.html
+++ b/index.html
@@ -380,8 +380,8 @@
 
     // ====== SUPABASE SETUP ======
     // GANTI DENGAN PROJECT KAMU
-    const SUPABASE_URL = "https://YOUR_PROJECT_ID.supabase.co";
-    const SUPABASE_ANON_KEY = "YOUR_ANON_PUBLIC_KEY";
+    const SUPABASE_URL = "https://ylyiktbputlddeilnada.supabase.co";
+    const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InlseWlrdGJwdXRsZGRlaWxuYWRhIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjQzMzYwMTUsImV4cCI6MjA3OTkxMjAxNX0.6FOD3dZWS3vBDHgnUYXJD6Dt6N2CVaWZ15tqxdgeVUA";
 
     const { createClient } = supabase;
     const sb = createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
